--- a/references.bib
+++ b/references.bib
@@ -525,3 +525,13 @@
   doi = {10.1037/gpr0000028},
   langid = {english}
 }
+
+@article{brandmaier2015lifespan,
+  title={LIFESPAN: A tool for the computer-aided design of longitudinal studies},
+  author={Brandmaier, Andreas M and von Oertzen, Timo and Ghisletta, Paolo and Hertzog, Christopher and Lindenberger, Ulman},
+  journal={Frontiers in Psychology},
+  volume={6},
+  pages={272},
+  year={2015},
+  publisher={Frontiers Media SA}
+}
