add center affiliation

--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -4,10 +4,10 @@ bibliography: references.bib
 abstract: "`r paste0(c('\\\\noindent', readLines('abstract.md')), collapse = ' ')`"
 author:
   - name: Aaron Peikert
-    affil: a, b
+    affil: a, b, c
     email: peikert@mpib-berlin.mpg.de
   - name: Andreas M. Brandmaier
-    affil: a, c, d
+    affil: a, b, c, d 
     email: brandmaier@mpib-berlin.mpg.de
 affiliation:
   - num: a
@@ -18,10 +18,10 @@ affiliation:
       Department of Psychology, Humboldt-Universität zu Berlin, Unter den Linden 6, 10117 Berlin, Germany
   - num: c
     address: |
-      MSB Medical School Berlin, Rüdesheimer Str. 50, 14197 Berlin, Germany
+     Max Planck UCL Centre for Computational Psychiatry and Ageing Research Berlin, Germany and London, UK
   - num: d
     address: |
-     Max Planck UCL Centre for Computational Psychiatry and Ageing Research Berlin, Germany and London, UK
+      MSB Medical School Berlin, Rüdesheimer Str. 50, 14197 Berlin, Germany
 repro:
   scripts:
     - R/plots.R
