--- a/references.bib
+++ b/references.bib
@@ -255,7 +255,7 @@
   doi = {10.1001/jama.287.21.2831}
 }
 
-@unpublished{stefanBigLittleLies2022,
+@article{stefanBigLittleLies2022,
   doi = {10.1098/rsos.220346},
   url = {https://doi.org/10.1098/rsos.220346},
   year = {2023},
