--- a/references.bib
+++ b/references.bib
@@ -538,3 +538,24 @@
   year={2015},
   publisher={Frontiers Media SA}
 }
+
+@misc{zenodo-release,
+  title = {Supplemental materials for preprint: Why does preregistration increase the persuasiveness of evidence? {{A Bayesian}} rationalization},
+  shorttitle = {Why Does Preregistration Increase the Persuasiveness of Evidence?},
+  author = {Peikert, Aaron and Brandmaier, Andreas M.},
+  year = {2023},
+  month = feb,
+  doi = {10.5281/zenodo.7648471},
+  howpublished = {Zenodo}
+}
+
+@misc{peikertWhyDoesPreregistration2023,
+  title = {Why Does Preregistration Increase the Persuasiveness of Evidence? {{A Bayesian}} Rationalization},
+  shorttitle = {Why Does Preregistration Increase the Persuasiveness of Evidence?},
+  author = {Peikert, Aaron and Brandmaier, Andreas Markus},
+  year = {2023},
+  month = feb,
+  publisher = {{PsyArXiv}},
+  doi = {10.31234/osf.io/cs8wb},
+  keywords = {Bayesian,confirmation,exploration,hypothesis testing,Meta-science,Open Science,preregistration,Quantitative Methods,Social and Behavioral Sciences,Theory and Philosophy of Science},
+}
