make link to preprint clearer

--- a/references.bib
+++ b/references.bib
@@ -556,6 +556,7 @@
   year = {2023},
   month = feb,
   publisher = {{PsyArXiv}},
+  howpublished = {{PsyArXiv}},
   doi = {10.31234/osf.io/cs8wb},
   keywords = {Bayesian,confirmation,exploration,hypothesis testing,Meta-science,Open Science,preregistration,Quantitative Methods,Social and Behavioral Sciences,Theory and Philosophy of Science},
 }
